style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');

    @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500&display=swap');

 body {
      background-color: #282F44;
    }

    h1 {
      color: #0aff70;
    text-align: center;
      font-family: 'Chakra Petch', sans-serif;
      padding: 10px;
    }

    p {
      color: #E1F2FE;
      font-family: 'Quicksand', sans-serif;#B2B1CF
       }

    img{
      float: right;
      width: 325px;
      height: 500px;
      margin: 50px 50px 50px 50px;
      border: solid #98D2EB 5px ;
      border-radius: 50px;
    }

    h2{
        color: #21bcff;
      font-family: 'Chakra Petch', sans-serif;
      padding: 10px;
      text-align: center;
    }

    .pageLinks{
        color: #21bcff;
        text-align: center;
      border-style: dashed;
      border-radius: 100px;
      padding: 10px;
      background-color: #7df4fc;

    }
    .SkillList{
      list-style-type: disc;
      font-family: 'Chakra Petch', sans-serif;
      display: flex;
      justify-content: center;
      align-items: center;
      color:#7df4fc;
      padding: 5px;
      color:#ccebf8;
    
    }

.ToolsList{
      list-style-type: disc;
      font-family: 'Chakra Petch', sans-serif;
      display: flex;
      justify-content: center;
      align-items: center;
      color:#7df4fc;
      padding: 5px;
      color:#ccebf8;
    
    }


     .ToolsList ul{
      text-align: center;
      border-style:dashed;
      border-radius: 50px;
      padding: 50px;
      border-color:#0aff70;
    }

  .SkillList ul{
    text-align: center;
    border-style:dashed;
    border-radius: 50px;
    padding: 50px;
    border-color:#0aff70;

  }

  h3{
    color:#21bcff;
    font-family: 'Chakra Petch', sans-serif;
  }

  .Reconnection{
    text-align: left;
    text-justify:left;
    font-family: 'Chakra Petch', sans-serif;
    color:#7df4fc;
  }

  .Combat_Scene_ScreenShot img{
    justify: center;
    justify-content: center;
    width: 450px;
    height: 200px;
    margin: 10px 10px 10px 10px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }

  .Dialogue_Widget_Screenshot img{
    justify: center;
    justify-content: center;
    width: 400px;
    height: 300px;
    margin: 10px 10px 10px 10px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }

  .Fearosis{
    text-align: left;
    text-justify: left;
    font-family: 'Chakra Petch', sans-serif;
    color:#7df4fc;

  }

  .MapScreenshot img{
    justify-content: center;
    width: 400px;
    height: 250px;
    margin: 10px 10px 10px 10px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }
  .UpgradesScreenShot img{
    justify-content: center;
    width: 400px;
    height: 250px;
    margin: 10px 10px 10px 10px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }

  .DescriptionsScreenshot img{
    justify-content: center;
    width: 300px;
    height: 300px;
    margin: 10px 10px 10px 10px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }
  
  .Jamsepticeye {
    text-align: left;
    font-family: 'Chakra Petch', sans-serif;
    color:#7df4fc;
  }

  .Creature_Carnival {
    text-align: left;
    font-family: 'Chakra Petch', sans-serif;
    color:#7df4fc;
  }

  .CopyofBallon img{
    float: right;
    width: 350px;
    height: 500px;
    margin: 50px 50px 50px 50px;
    border: solid #98D2EB 5px ;
    border-radius: 10px;
  }

